Fixed an overlap in CSS styles for #profile

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -212,7 +212,7 @@ form.form-default {
     }
 }
 
-#profile {
+#user-profile {
     border-bottom: 1px solid #AAAAAA;
     background-color: darken($bg-color, 2%);
 
